tests/ui/const-generics/adt_const_params/const_param_ty_trait_no_gate.stderr
error[E0658]: use of unstable library feature `const_param_ty_trait`
  --> $DIR/const_param_ty_trait_no_gate.rs:1:5
   |
LL | use std::marker::ConstParamTy_;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #95174 <https://github.com/rust-lang/rust/issues/95174> for more information
   = help: add `#![feature(const_param_ty_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `const_param_ty_trait`
  --> $DIR/const_param_ty_trait_no_gate.rs:4:12
   |
LL | fn miaw<T: ConstParamTy_>() {}
   |            ^^^^^^^^^^^^^
   |
   = note: see issue #95174 <https://github.com/rust-lang/rust/issues/95174> for more information
   = help: add `#![feature(const_param_ty_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
